package Shelter;

public class Employee {
}
