@startuml
class Animal {
    - HasId; boolean
    - ID: int
    - Species: string
    - Breed: string
    - Age: int
    - Weight: float
    - Description: string
    - Picture
    +  generateId()
}

class User {
    - Name: string
    - Address: string
    - Email: string
    - YourAdoptionResuests: List<Request>
    + ViewAnimals()
    + AdoptAnimal()
}

class Employee {
    + AddAnimal()
    + ModifyAnimal()
    + ViewRequests()
    + ApproveRequests()
}

class Shelter {
    - AnimalList: List<Animal>
    - EmployeeList: List<Employee>
    - AdoptionList: List<Adoption>
    - UserList: List<User>
    + loadAnimalListFromCSV(String filename)
    + loadEmployeeListFromCSV(String filename)
    + loadAdoptionListFromCSV(String filename)
    + loadUserListFromCSV(String filename)
    + getAnimalListElem(int i)
    + addAnimalToList(Animal animal)
    + getEmployeeListElem(int i)
    + addEmployeeToList(Employee employee)
    + getAdoptionListElem(int i)
    + addAdoptionApplicationToList(Adoption adoption)
    + getUserListElem(int i)
    + saveAnimalListToCSV(String filename)
    + saveEmployeeListToCSV(String filename)
    + saveAdoptionListToCSV(String filename)
    + saveUserListToCSV(String filename)


}

class Adoption {
    - UserInfo:
    - AnimalInfo:
    - Status:
}


User <|-- Employee
Shelter o-- Animal
Shelter o-- Employee
Shelter o-- Adoption
Adoption *-- User

@enduml
